Fix GitHub Actions permissions for deployment
- Change contents permission from read to write
- Add AI Life Solution Challenge submission document

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write  # gh-pages에 push 권한 필요
   pages: write
   id-token: write
 
